ADD: consul deploy

--- a/templates/consul/config.json.j2
+++ b/templates/consul/config.json.j2
@@ -1,25 +1,21 @@
 {
-  {% if (groups['esMasters'] | count) >= 3 -%}
+{% if (groups['consulServers'] | count) >= 3 %}
   "server": true,
   "bootstrap_expect": 3,
   "retry_join": [
-    {%- for item in groups['esMasters'] if item != ansible_nodename -%}
+    {%- for item in groups['consulServers'] if item != ansible_nodename -%}
       "{{ hostvars[item]['ansible_' + bind_interface]['ipv4']['address'] | default(hostvars[item]['ansible_default_ipv4']['address']) }}"{%- if loop.nextitem is defined -%},{%- endif -%}
     {%- endfor -%}
   ],
-  {% endif -%}
   "ui": true,
   "client_addr": "0.0.0.0",
   "performance": {
     "raft_multiplier": 1
-  },
-  "connect": {
-    "enabled": true
-  },
-{% elif 'esMasters' not in group_names %}
+  }
+{% elif 'consulServers' not in group_names %}
   "server": false,
   "retry_join": [
-    {%- for item in groups['esMasters'] -%}
+    {%- for item in groups['consulServers'] -%}
       "{{ hostvars[item]['ansible_' + bind_interface]['ipv4']['address'] | default(hostvars[item]['ansible_default_ipv4']['address']) }}"{%- if loop.nextitem is defined -%},{%- endif -%}
     {%- endfor -%}
   ],
@@ -28,7 +24,7 @@
   "bootstrap": true,
 {% endif %}
 {# ---------------- #}
-  "datacenter": "{{ consul_dc_name }}",
+  "datacenter": "{{ consul.dc_name }}",
   "data_dir": "/var/consul",
   "encrypt": "{{ consul_key }}",
   "log_level": "err",
@@ -42,5 +38,8 @@
     "service_ttl": {
       "*": "5s"
     }
+  },
+  "connect": {
+    "enabled": true
   }
 }
